# Serial-communication

./: CMakeLists.txt  main.c
app/: CMakeLists.txt  date_time_ctrl.cpp  date_time_ctrl.h  main.c  main.cpp  selfcheck.cpp  selfcheck.h  stm32_3399.c  stm32_3399.cpp  stm32_3399.h  switch4G.cpp  switch4G.h  util.cc  util.h  utilUart.c  utilUart.h
include/: stm32_3399.h
src/: stm32_3399.c
